add labels, type, id to form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div>
 
     <head>
-        <title>HTML DRILL LAB 1</title>
+        <title>HTML DRILL LAB </title>
     </head>
 
     <body>
@@ -136,15 +136,20 @@
         </header>
         <main>
             <form action="">
-                <input type="Text" placeholder="first name">
-                <input type="text" placeholder="email">
-                <input type="text" placeholder="last name">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="Email">Email</label>
+                <input type="text" id="email" name="email"><br>
+                <label for="lname">Last Name</label>
+                <input type="text" id="lName" name="lName"><br>
                 <input type="button" value="Submit">
+                <hr>
                 <ol>Forms</ol>
                 <ol>React</ol>
                 <ol>BackEnd</ol>
                 <ol>CSS</ol>
                 <ol>Type Script</ol>
+                <hr>
                 <ul>Smart</ul>
                 <ul>Funny</ul>
                 <ul>Sweet</ul>
